@startuml
title "Field Class Diagram"
interface IField {
    +{abstract} RenderData getData()
    +{abstract} void setData(RenderData data)

}
abstract BaseField {
    +RenderData getData()
    +void setData(RenderData newData)
    -RenderData data

}
IField <|-- BaseField
class GenericField {

}
BaseField <|-- GenericField
@enduml